crates/tm-cypher/tests/snapshots/golden_ir__undirected.snap
---
source: crates/tm-cypher/tests/golden_ir.rs
expression: "ir_of(\"MATCH (a)-[r:knows]-(b) RETURN r\")"
---
; RelIsomorphism Null3VL BagOfEids
(project [?x1 ?x2 ?x3]
  (join
    (union
      (project [?x1 ?x3 ?x2]
        (filter (not (isLiteral ?x2))
          (triple ?x1 <urn:tiramemsu:v:knows> ?x2 :view now :eid ?x3)))
      (project [?x2 ?x3 ?x1]
        (filter (not (sameTerm ?x2 ?x1))
          (filter (not (isLiteral ?x1))
            (triple ?x2 <urn:tiramemsu:v:knows> ?x1 :view now :eid ?x3)))))))
