crates/tm-cypher/tests/snapshots/golden_ir__untyped_relationship_hides_sys_and_rdf_type.snap
---
source: crates/tm-cypher/tests/golden_ir.rs
expression: "ir_of(\"MATCH (a)-[r]->(b) RETURN r\")"
---
; RelIsomorphism Null3VL BagOfEids
(project [?x1 ?x2 ?x3]
  (join
    (project [?x1 ?x3 ?x2]
      (filter (and (not (STRSTARTS (STR ?p4) "urn:tiramemsu:sys:")) (!= ?p4 <http://www.w3.org/1999/02/22-rdf-syntax-ns#type>) (not (isLiteral ?x2)))
        (triple ?x1 ?p4 ?x2 :view now :eid ?x3)))))
